# rs-sdk

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.html  CNAME  CONTRIBUTING.MD  Makefile  README.md  async_support.html  examples.html  examples.py  genindex.html  index.html  objects.inv  openapi.yaml  py-modindex.html  pyproject.toml  quickstart.html  release_notes.html  search.html  searchindex.js  setup.html
.github/: .dependabot.yaml  dependabot.yaml
.github/workflows/: generate-documentation.yaml  generate_documentation.yaml  validate-cli.yaml  validate-ts.yaml  validate.yaml  verify.yaml
_sources/: CHANGELOG.md.txt  index.rst.txt  quickstart.md.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/root/: index.html
autoapi/scorable/: index.html
cli/: Makefile  README.md  cli.py  experiments.yaml  install.sh  prompt-tests.yaml  pyproject.toml
cli/tests/: test_cli.py
docs/: CHANGELOG.md  Makefile  async_support.md  conf.py  cz.yaml  examples.md  index.rst  quickstart.md  requirements.txt  setup.md
en/latest/: index.html  quickstart.html
examples/: async_custom_evaluator.py  async_evaluator_skill.py  asyncio.py  calibration.py  chat_openai.py  chat_openai_2.py  create_judge.py  custom_evaluator.py  data_loader.py  evaluator_skill.py  evaluator_skill_minimal.py  execution_logs.py  minimal.py  model.py  objective.py  pipeline.py  preset_evaluator.py  pyproject.toml  reference_variable.py  run_evaluator_by_name.py  run_rag.py  run_tagging.py  simple.py  thread_pool.py  validator.py
python/: .gitignore  Makefile  README.md  examples.py  openapi.yaml  pyproject.toml
python/docs/: CHANGELOG.md  conf.py  examples.md  index.rst  quickstart.md  setup.md
python/examples/: async_custom_evaluator.py  async_evaluation.py  calibration.py  create_judge.py  custom_evaluator.py  execution_logs.py  model.py  preset_evaluator.py  run_evaluator_by_name.py  run_rag.py  run_tagging.py  simple_judge.py  thread_pool.py
python/src/: .openapi-generator-ignore
python/tests/: test_acalibrate_batch.py  test_calibrate_batch.py  test_client.py  test_judges.py  test_signature.py  test_utils.py
src/: .openapi-generator-ignore
src/root/: __about__.py  __init__.py  client.py  data_loader.py  datasets.py  execution_logs.py  judges.py  models.py  objectives.py  skill_chat.py  skills.py  utils.py  validators.py
tests/: test_acalibrate_batch.py  test_calibrate_batch.py  test_client.py  test_signature.py  test_utils.py
ts/: hierarchy.html  index.html  modules.html
ts/assets/: hierarchy.js  highlight.css  navigation.js  search.js
ts/classes/: DatasetsResource.html  RootSignals.html  RootSignalsError.html  Scorable.html  ScorableError.html
ts/interfaces/: ClientConfig.html  CreateJudgeData.html  CreateModelData.html  CreateObjectiveData.html  EvaluatorListParams.html  ExecutionLogListParams.html  ExecutionPayload.html  JudgeExecutionPayload.html  JudgeListParams.html  ListParams.html  ModelListParams.html  ObjectiveListParams.html  PaginatedResponse.html  UpdateJudgeData.html  UpdateModelData.html  UpdateObjectiveData.html
ts/types/: EvaluatorDetail.html  EvaluatorListItem.html  ExecutionLogDetails.html  ExecutionLogList.html  ExecutionResult.html  Judge.html  JudgeDetail.html  JudgeExecutionPayload.html  JudgeExecutionResult.html  ModelDetail.html  ModelList.html  ObjectiveDetail.html  ObjectiveList.html
typescript/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json  typedoc.json  vitest.config.ts
typescript/examples/: README.md  advanced-judges.ts  basic-evaluation.ts  batch-evaluation.ts  create-judge.ts  custom-evaluator.ts  error-handling-patterns.ts  execution-logs.ts  real-world-integration.ts  simple-judge.ts
typescript/scripts/: generate.sh
typescript/src/: client.ts  index.ts
(+102 files in other folders)
